// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keywords should have KerML keywords collected 1`] = `
Set {
  ":",
  "typed",
  "by",
  "~",
  "conjugates",
  ";",
  "{",
  "}",
  "dependency",
  "from",
  ",",
  "to",
  "namespace",
  "alias",
  "for",
  "import",
  "::*",
  "::**",
  "[",
  "]",
  "package",
  "library",
  "filter",
  "type",
  "disjoint",
  "unions",
  "intersects",
  "differences",
  "member",
  "specialization",
  "subtype",
  "conjugation",
  "conjugate",
  "disjoining",
  "classifier",
  "subclassifier",
  "composite",
  "portion",
  "feature",
  "chains",
  "inverse",
  "of",
  "featured",
  "inverting",
  "featuring",
  "typing",
  "subset",
  "redefinition",
  "=",
  "default",
  ":=",
  "multiplicity",
  "datatype",
  "class",
  "struct",
  "assoc",
  "connector",
  "(",
  ")",
  "binding",
  "succession",
  "first",
  "then",
  "behavior",
  "step",
  "function",
  "return",
  "expr",
  "predicate",
  "bool",
  "inv",
  "true",
  "false",
  "interaction",
  "flow",
  ".",
  "metaclass",
  "#",
  "@",
  "metadata",
  "about",
  "if",
  "?",
  "else",
  "??",
  "implies",
  "|",
  "or",
  "xor",
  "&",
  "and",
  "as",
  "@@",
  "meta",
  "..",
  "+",
  "-",
  "*",
  "/",
  "%",
  "**",
  "^",
  "all",
  "->",
  ".?",
  "null",
  "<",
  ">",
  ":>",
  "specializes",
  "subsets",
  "::>",
  "references",
  ":>>",
  "redefines",
  "in",
  "inout",
  "out",
  "private",
  "protected",
  "public",
  "::*::**",
  "abstract",
  "readonly",
  "derived",
  "end",
  "standard",
  "ordered",
  "nonunique",
  "comment",
  "doc",
  "rep",
  "language",
  "::",
  "not",
  "istype",
  "hastype",
  "<=",
  ">=",
  "==",
  "!=",
  "===",
  "!==",
}
`;

exports[`keywords should have SysML keywords collected 1`] = `
Set {
  ":",
  "defined",
  "by",
  "timeslice",
  "snapshot",
  "assume",
  "require",
  "variation",
  "individual",
  "dependency",
  "from",
  ",",
  "to",
  ";",
  "{",
  "}",
  "metadata",
  "def",
  "#",
  "@",
  "about",
  "ref",
  "library",
  "package",
  "filter",
  "alias",
  "for",
  "import",
  "::*",
  "::**",
  "[",
  "]",
  "variant",
  "=",
  "default",
  ":=",
  "attribute",
  "enum",
  "occurrence",
  "event",
  "then",
  "item",
  "part",
  "port",
  "~",
  "binding",
  "bind",
  "succession",
  "first",
  "connection",
  "connect",
  "(",
  ")",
  "flow",
  "message",
  "of",
  ".",
  "interface",
  "allocation",
  "allocate",
  "action",
  "perform",
  "accept",
  "via",
  "at",
  "after",
  "when",
  "send",
  "assign",
  "if",
  "else",
  "while",
  "loop",
  "until",
  "in",
  "merge",
  "decide",
  "join",
  "fork",
  "state",
  "parallel",
  "entry",
  "do",
  "exit",
  "exhibit",
  "transition",
  "calc",
  "return",
  "constraint",
  "assert",
  "not",
  "requirement",
  "subject",
  "frame",
  "concern",
  "actor",
  "stakeholder",
  "satisfy",
  "case",
  "objective",
  "analysis",
  "verification",
  "verify",
  "use",
  "include",
  "view",
  "render",
  "expose",
  "viewpoint",
  "rendering",
  "?",
  "??",
  "implies",
  "|",
  "or",
  "xor",
  "&",
  "and",
  "as",
  "@@",
  "meta",
  "..",
  "+",
  "-",
  "*",
  "/",
  "%",
  "**",
  "^",
  "all",
  "->",
  ".?",
  "false",
  "true",
  "null",
  "<",
  ">",
  ":>",
  "specializes",
  "subsets",
  "::>",
  "references",
  ":>>",
  "redefines",
  "inout",
  "out",
  "private",
  "protected",
  "public",
  "::*::**",
  "abstract",
  "readonly",
  "derived",
  "end",
  "standard",
  "ordered",
  "nonunique",
  "comment",
  "doc",
  "rep",
  "language",
  "::",
  "istype",
  "hastype",
  "<=",
  ">=",
  "==",
  "!=",
  "===",
  "!==",
}
`;
